.dev-workstream/fails/batch-20-keyed-topics/commit-2/tests/CycloneDDS.Runtime.Tests/Gen/TestMessage.idl
// Auto-generated IDL for TestMessage by CycloneDDS C# Bindings
// Generated on: 2026-01-20 08:33:46 UTC
#ifndef _CYCLONEDDS_GENERATED_TESTMESSAGE_IDL_
#define _CYCLONEDDS_GENERATED_TESTMESSAGE_IDL_

module CycloneDDS {
    module Runtime {
        module Tests {
            @appendable
            struct TestMessage {
                int32 id;
                int32 value;
            };

        };
    };
};

#endif // _CYCLONEDDS_GENERATED_TESTMESSAGE_IDL_
